tests/snapshots/blockflow/raw_block/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - raw-block
    - f344b3dd45f39d62cfd200cfa3312c080018102908787c5565b8c8af3647368f
---
success: true
exit_code: 0
----- stdout -----
{
  "value": "000000000000000000000000000000000000000000000011000700000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f0467c2593e149510c08e9544544e8e66743500cbeef0cc27f315ff20f806a660000011e9db4982820ffffff0100040080004e20c1174876e8000001c6d3c21bcecceda100000000622990ad7be0a3d163562c10fd7985ef40a3e41857e7a1583406a785efc9273a0000017cffd8d588004020d55dedab77b982ade743516f96d9c4fe85f19cc85e64d02b81b67532ce72df480100000000"
}

----- stderr -----
